welcome.lessons.welcome.methods.flowerpot.FlowerPot.scala.error
FlowerPot:16: error: '<-' expected but ')' found.
  for (compteur-1 to 4){
                      ^FlowerPot:32: error: illegal start of simple expression
}
^